@@ -1,0 +1,79 @@
+%PDF-1.3
+1 1 obj
+<<
+  /Type /Catalog
+  /Pages 2 1 R
+>>
+endobj
+
+2 1 obj
+<<
+  /Type /Pages
+  /Kids [
+    3 1 R
+  ]
+  /Count 1
+>>
+endobj
+
+3 1 obj
+<<
+  /Type /Page
+  /Parent 2 1 R
+  /MediaBox [0 0 612 792]
+  /Contents 4 1 R
+  /Resources <<
+    /ProcSet 5 1 R
+    /Font <<
+      /F1 6 1 R
+    >>
+  >>
+>>
+endobj
+
+4 1 obj
+<<
+  /Length 44
+>>
+stream
+BT
+  /F1 24 Tf
+  72 720 Td
+  (Potato) Tj
+ET
+endstream
+endobj
+
+5 1 obj
+[
+  /PDF
+  /Text
+]
+endobj
+
+6 1 obj
+<<
+  /Type /Font
+  /Subtype /Type1
+  /Name /F1
+  /BaseFont /Helvetica
+  /Encoding /WinAnsiEncoding
+>>
+endobj
+
+xref
+0 7
+0000000000 65535 f 
+0000000009 00001 n 
+0000000063 00001 n 
+0000000135 00001 n 
+0000000307 00001 n 
+0000000403 00001 n 
+0000000438 00001 n 
+trailer <<
+  /Size 7
+  /Root 1 1 R
+>>
+startxref
+556
+%%EOF
